--- a/_units/10.md
+++ b/_units/10.md
@@ -4,15 +4,20 @@
 # Expectation
 ###
 title: Expectation and Anticipation 
-number: 0
+number: 10
 short_description: unit on expectation / anticipation / prediction
-summary: 
+summary: Expectation and anticipation are important and evolutionarily advantageous characteristics of our cognitive system. In music, expectations feature prominently in our perception of melody, harmony, and rhythm. The systematic violation of expectation seems to lead to arousal and affect in our musical experience. The Implication Realization Model and Gap Fill are rather precise models that can be used to predict what is or is not expected in musical melodies, whereas the Dynamic Attention Theory is an account for our expectancies for rhythm. Musical expectancies have been observed using many convergent methods. These methods include production, betting paradigm, probe tone ratings, comparative ethnomusicology, reaction time methodology, the head turn paradigm, and Event-Related Potentials. Statistics in music seem to play an important role in musical composition, where we generally expect musical events that occur with high frequencies and transitional probabilities in a musical style. #just copied the summary from below. --> We are not being able to use two paragraphs.  
 authors: 
 - Psyche Loui
-topics: [Unit10Introduction, What is expectancy?, Why study expectancy?, Theories of expectation, Expectancies for Melody, Expectancies for Rhythm, Methods for studying expectancy, Summary, References, Links and Downloads, QuizItems]
+topics: [Unit10Introduction, What is expectancy, Why study expectancy, Theories of expectation, Expectancies for Melody, Expectancies for Rhythm, Methods for studying expectancy, Summary, References, Links and Downloads, QuizItems]
+# [Unit10Introduction, What is expectancy?, Why study expectancy?, Theories of expectation, Expectancies for Melody, Expectancies for Rhythm, Methods for studying expectancy, Summary, References, Links and Downloads, QuizItems] --> We are not being able to use "?" in this part of the document
 test_questions:
- - question 1
- - question 2
+
+ - Why might it be evolutionarily advantageous for our brains to form expectations? Give a real-life example. Are there any circumstances under which it can be a disadvantage to form expectations? If so, what are these circumstances?
+ - What is the gap fill principle? Give an example of gap fill in a melody.
+ - Describe the probe tone paradigm. What do probe tone profiles look like?
+ - What are event-related potentials and what do they show for unexpected musical chords?
+ - What kinds of statistics are used in musical compositions?
 
 ###
 # page layout:
@@ -26,6 +31,7 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Expectation
+
 In this unit on expectation and anticipation, we will talk about:
 * functions and demonstrations of expectation and anticipation
 * theories of expectation
@@ -33,6 +39,7 @@ In this unit on expectation and anticipation, we will talk about:
 * types of expectation and the learning of expectation
 
 # What is expectancy?
+
 Expectancy is a state of anticipation for the future. While expectancy is commonly conceived as a generalized state, expectation is a more specific sense of having some knowledge or prediction of which events will occur in the near future (e.g. Eerola, 2003). Thus, one can have expectations for which note or chord will come next in a piece of music, but a change in dynamics in music, for example, changes one's expectancy for loud music. 
 
 Some quotes on expectancy, expectation, and anticipation: 
@@ -47,6 +54,7 @@ Here is an example of three different conditions of expectancy in music. Listen 
 1. 
 
 # Why do we study expectation?
+
 Expectations are evolutionarily adaptive because the ability to form expectations accurately for future events facilitates us in our perception and action. To illustrate the evolutionary advantage for expectation, imagine the following scenario. You are driving your car up the street when you see this: 
 
  (image source: http://save-u.org)
@@ -90,6 +98,7 @@ What would you expect to hear next?
 While 1 seems to be the most obviously expected answer, 2 was the more artistically interesting, albeit slightly unexpected. Choice 2 was in fact used in the actual recording of Mozart's Twinkle Twinkle Little Star Variations. This example shows that it is the slight variations, the slight manipulations of expectations, that we find most interesting and artistically appealing. Thus, the ability to form expectations has been proposed as the source of emotion and meaning in music (Meyer, 1956).
 
 # Theories Of Expectation
+
 To date, a number of theories have been proposed to describe and understand our experience of musical expectation. The first (and perhaps most influential) of such theories is the Expectation-Arousal theory by Leonard Meyer (1956), which generally posits that the systematic violation of expectation leads to arousal. This theory could be applied to harmonic, melodic, and rhythmic factors, but is a descriptive theory rather than a formally defined set of predictions.
 
 Meyer's student Narmour (1990) proposed a more formal theory to account for ExpectationForMelody. Narmour's ImplicationRealizationModel defined a formal set of rules, mainly relating each interval to the next.
@@ -99,6 +108,7 @@ More recently, Huron (2006) proposed that GapFill and RegressionToTheMean may be
 In another line of research, Jones (2002) proposed the DynamicAttentionTheory to account for ExpectanciesForRhythm. Their model is mostly used to account for rhythmic expectancies such as our internal anticipation for regularities in rhythm and meter.
 
 # Expectation and Arousal
+
 Meyer (1956), in his seminal book Emotion and Meaning in Music, proposed that systematic violations of expectations lead to increased arousal, from which affective experience is derived. These expectations are implicitly learned, i.e. acquired without awareness of the listener, and may be applicable to music as well as to other modalities. 
 
 Although the model allows for many possibilities, the exact relationship between expectation and affect was not formally defined in the Expectation-Arousal theory. Thus it is unclear exactly what degree of expectation leads to maximal arousal; nor it is clear how expectation can be systematically manipulated. 
@@ -119,6 +129,7 @@ The following graph represents musically trained and untrained subjects' prefere
 To date, the most well-specified models for musical expectation mostly refer to expectation for melody. The ImplicationRealizationModel, first proposed by Narmour (1989), is a formal set of rules defining interval directions and sizes in melodies. The many tenets of the ImplicationRealizationModel will be discussed below. In contrast, Huron (2006) has discussed GapFill and RegressionToTheMean as parsimonious theories to account for similar melodic structures.
 
 ## Implication Realization Model
+
 Narmour's Implication Realization Model provides a set of predictions for melodic structure. In particular, the IR model looks at interval sizes and directions between notes of a melody. An interval is defined as the difference in pitch between any two successive notes. In the IR model, when given three notes making two intervals, the first interval is defined as the Implication interval, whereas the second interval is the Realization interval. 
 
 ### Definitions of the IR model
@@ -135,6 +146,7 @@ The IR model predicts these melodic principles (based on Krumhansl, 1995):
 * Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.  (image source: Krumhansl, 1995)
 
 ## Gap Fill
+
 Gap fill was first proposed by Huron (1990?) as a parsimonious account for interval sizes and directions in melodies. The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. 
 
 An illustration of gap fill processes. 
@@ -144,11 +156,13 @@ Countless famous musical examples can illustrate the gap fill principle. For ins
 The idea of gap fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure (Wertheimer?), originally used in vision, are important also for perceiving melodies as holistic, unified objects. 
 
 # Expectancies For Rhythm
+
 The theories discussed above, such as Implication Realization and Gap Fill, mostly have to do with melodic expectancy. In addition to expecting what musical events occur, however, it is important to examine our expectancy for when they occur. These expectancies, typically dealing with rhythm, meter, and duration, have also been explored, notably by Jones et al. (e.g. Jones & Boltz, 1989) in their Dynamic Attention Theory (see DynamicAttentionTheory) and by Desain and Honing (2003) in their work relating rhythm perception to meter. 
 
 Desain and Honing's work shows that rhythms can be perceived categorically, and that the perception of rhythms and note durations is highly dependent upon expectancies set up by a metric context.
 
 ## Dynamic Attention Theory
+
 In the DynamicAttentionTheory (Jones & Boltz, 1989) and subsequent work, Jones et al. propose models to account for the main observation: that perception and memory are most accurate for events occurring at an expected time. Thus, Jones et al (2002) proposed that expectation heightens attention, whereas attention facilitates perception and memory. 
 
 In the Jones et al (2002) experiment, melodies were played with the last note's onset being varied in time. Performance on a perceptual task was best when the onset of the last note was presented at the precise moment as predicted by the inter-onset interval of the stream of notes before the last note (see figure). The performance on perceptual tasks declined as the onset time of the last (target) note deviated from expected, thus forming an expectancy curve, or a function relating temporal expectedness to perceptual performance. Jones et al (2002) propose a theory of rhythmic entrainment which views attention as an internal rhythmic oscillator with a certain resonance frequency, that adjusts (or entrains) itself to the inter-onset interval of event seqencies. 
@@ -170,6 +184,7 @@ A model of rhythmic entrainment
  (image source: Jones et al, 2002)
 
 # Methods for assessing musical expectancy
+
 How can we measure musical expectancy? The methods adopted to date are many and varied: 
 1. Production Paradigm
 1. Betting Paradigm
@@ -181,11 +196,13 @@ How can we measure musical expectancy? The methods adopted to date are many and 
 1. Electrophysiological Studies
 
 ## Production Paradigms
+
 The production paradigm is perhaps the simplest way to demonstrate expectaition, in which participants are typically presented with a melody or a chord progression, and are asked to either sing the note they expect to hear next, or play the expected note on a keyboard.
 
 While the production paradigm may seem to be a most direct way to investigate one's musical expectations, certain issues may introduce bias in results obtained this way. Firstly, many individuals have trouble vocalizing pitches accurately, especially if the intended pitch falls beyond or between the vocal registers of the participant. Production paradigm data collected using a keyboard may be similarly constrained by participants' keyboard skills. Finally, the production paradigm leads to only one answer, whereas expectation may be divided among several notes.
 
 ## Betting Paradigm
+
 In contrast to the production paradigm, the betting paradigm (Huron, 2006) eliminates confounds associated with production limitations (such as voice registers and piano skills). In the betting paradigm, participants are given a musical surface such as a keyboard. They listen to a melody and their task is to place bets (chips) on where the melody will end. 
 
 The following is a demonstration of the betting paradigm: 
@@ -195,6 +212,7 @@ Click here for a demo of the betting paradigm.
 As the above example demonstrates, one advantage of the betting paradigm is that participants' responses can represent not only what they expect, but also how strongly they expect each note. However, a disadvantage of the betting paradigm is that participants must understand the configuration of the response surface in order to perform the task; thus, in the above example where the keyboard is used, pianists would have an advantage over non-keyboard players. 
 
 ## Probe Tone Paradigm
+
 Perhaps the most widely used methodology in music perception cognition, the probe tone paradigm (Krumhansl & Kessler, 1983) measures musical expectancy using goodness-of-fit ratings. In the probe tone paradigm, the participants listen to a melody, which can be a scale, a well-known melody, or an unfamiliar melody. The melody is followed by a tone, and the participant's task is to rate how well the last tone (called the probe tone) fits with the preceding melody. 
 Click here for a demo of the probe tone paradigm. 
 
@@ -221,6 +239,7 @@ In a study using meloies from the Balinese slendro scale (Castellno et al, 1984)
 The ethnomusicologist Simha Arom (1991) has investigated rhythm and polyrhythm in Central African music using cognitive principles. His results show that while African music seems to have incredibly complex rhythmic structures, where each member of an ensemble operates at a different metric pattern, these complex polyrhythms could in fact be broken down into simple time ratios such as 2+2+3. These results suggest that expectancy for complex rhythms could also operate on simple cognitive structures. 
 
 ## Reaction Time Paradigm
+
 Another commonly used method to investigate musical expectation, which has been used especially for harmonic expectation, is the reaction time paradigm. The basic tenet of the reaction time methodology is that events which are less expected lead to longer response times. 
 
 In the standard reaction time experiment looking at harmonic expectancy (e.g. Bharucha & Stoeckig, 1986; Bigand et al, 1999), participants were presented with chord progressions ending with "target" chords. Some of the target chords were harmonically expected whereas others were harmonically unexpected. Half of the target chords were manipulated so that they were either of tune, or dissonant, or slightly temporally asynchronous (i.e. the notes in the chord started slightly unevenly). Participants' task was to determine whether the target chords were in tune/consonant/temporally synchronous depending on the experiment. Typically, results reveal delayed reaction times and increased error rates for harmonically unexpected target chords. The pattern of results seems similar for musicians and nonmusicians. This methodology is also known as harmonic priming, where the chord progressions prime participants into expecting certain target chords. 
@@ -232,7 +251,9 @@ Examples of chord progressions with expected and unexpected endings presented to
  (image source: Bigand et al, 1999)
 
 Results from a harmonic priming paradigm.
+
 ## Head Turn Paradigm
+
 Having covered the various methodologies used to empirically observe the effects of musical expectation, one important question concerns where these expectations come from. In an effort to investigate the origins of musical expectations, researchers are also attempting to trace the course of development of these expectations by looking at infants. The problem with infants is that they cannot perform most experimental tasks such as the probe tone paradigm and the reaction time paradigm. Thus one must devise specific experimental procedures for infants to find out what they know. 
 
 One commonly used experimental method for infants is the head turn paradigm. The head turn paradigm makes use of the fact that infants tend to turn their heads to look at novel objects, but the look time is significantly reduced for repetitive (boring) objects. For instance, when a light comes on for the first time in an experiment, infants turn to look for an extended time at the light, but after many repetitions of the same light coming on, they look for less time because of their habituation towards repeated events. If the light were to suddenly come on in a different colour, however, infants tend to dishabituate, that is, they tend to look for longer again. One interpretation of these typically results is that infants tend to look longer at unexpected events or objects. 
@@ -244,6 +265,7 @@ Example of apparatus for the head turn paradigm. Sounds played from speakers are
 Saffran's study on statistical learning of musical expectations
 
 # Statistical Learning
+
 From the head turn paradigm, the probe tone paradigm, and comparative ethnomusicological studies, we saw that tones which occur at higher frequencies and probabilities tend to be more highly expected. These are only a few pieces of evidence that statistics play a large role in our formation of musical expectations. We tend to expect things that are more likely to occur, and a sensitivity to these statistics leads to accurate predictions of events that are about to occur. 
 
 Statistics in music can be calculated at many levels. At the simplest level, event frequencies of notes constitutes a first-order statistic, where the notes occurring most often tend to be most highly expected. 
@@ -269,6 +291,7 @@ At an even higher level, we can observe higher-order statistics which may not de
 The first note in each group (the low G in this case) is predictive of the first note in the next group, regardless of what notes occur in the rest of each group. These non-adjacent dependencies, where one note depends not on its immediate predecessor but on another note many events before it, are important in creating a sense of implied harmony and are useful in voice leading.
 
 ## Electrophysiological Studies
+
 In the relatively new field of cognitive neuroscience, measures of brain potentials have been used as indices of expectation. 
 Event-Related brain Potentials (ERPs) are time-locked averages of electrical signals recorded from the human scalp. The principle behind ERP technology is that cognitive events, such as the formation of expectations, are due to specific patterns of neural firings. When groups of neurons fire together, they create rapid fluctuations in electrical voltages which can be picked up by electrodes on the surface of the scalp. These electrical fluctuations can be averaged over many instances of the same event, resulting in an electrical signal specifically associated with one cognitive activity. 
 
@@ -291,11 +314,13 @@ The earlier of the two components has been coined Early Right Anterior Negativit
 ERPs elicited by expected and unexpected chords. Negative is plotted up. Notice that the ERPs for the two kinds of chords diverge at two time points, first around 150-250ms, and then again at 400-600ms. Both effects are negative for the unexpected chords. The earlier effect is largest bilaterally over frontal areas of the brain; the later effect is largest over prefrontal areas. 
 
 # Summary
+
 Expectation and anticipation are important and evolutionarily advantageous characteristics of our cognitive system. In music, expectations feature prominently in our perception of melody, harmony, and rhythm. The systematic violation of expectation seems to lead to arousal and affect in our musical experience. The Implication Realization Model and Gap Fill are rather precise models that can be used to predict what is or is not expected in musical melodies, whereas the Dynamic Attention Theory is an account for our expectancies for rhythm. 
 
 Musical expectancies have been observed using many convergent methods. These methods include production, betting paradigm, probe tone ratings, comparative ethnomusicology, reaction time methodology, the head turn paradigm, and Event-Related Potentials. Statistics in music seem to play an important role in musical composition, where we generally expect musical events that occur with high frequencies and transitional probabilities in a musical style.
 
 # References
+
 * Huron, D. (2006). Sweet Anticipation.
 * Krumhansl, C.L. & Kessler, E.J. (1982). Tracing the dynamic changes in perceived tonal organization in a spatial representation of musical keys. Psychological Review, Vol. 89, No. 4, pp. 334-368. [16 pages] 
 * Krumhansl, C.L. (1995). Music Psychology and Music Theory: Problems and Prospects. Music Theory Spectrum, Vol. 17, No. 1, pp. 53-57; 78-80. [8 pages]
@@ -304,15 +329,10 @@ Musical expectancies have been observed using many convergent methods. These met
 * C.L. Krumhansl, (1990). Cognitive Foundations of Musical Pitch. Oxford Univ. Press.
 
 # Links and Downloads
+
 * Download and run the probe tone experiment here.
 * Download and run an experiment in the betting paradigm here.
 * David Huron's book on musical anticipation and expectation: Sweet Anticipation.
 
-# Quiz Items
-1. Why might it be evolutionarily advantageous for our brains to form expectations? Give a real-life example. Are there any circumstances under which it can be a disadvantage to form expectations? If so, what are these circumstances?
-1. What is the gap fill principle? Give an example of gap fill in a melody.
-1. Describe the probe tone paradigm. What do probe tone profiles look like?
-1. What are event-related potentials and what do they show for unexpected musical chords?
-1. What kinds of statistics are used in musical compositions?
 
 {% include unit_postamble.md %}
