some images for unit7

--- a/_units/07.md
+++ b/_units/07.md
@@ -51,7 +51,7 @@ While pitch has received the most attention in perception research, whereas most
 ## Perceptual Onset Vs Temporal Envelope
 It is important to make a distinction between the temporal envelope, the attack portion of which we usually consider to be the beginning of the sound, and the perceptual onset of a sound. In the case of a percussive sound made by a bell or a piano for example, the attack is nearly instantaneous, while other instruments like violins and clarinets have a variety of attacks at their disposal which can make it difficult pinpoint the onset of their sound. Attacks that last less than 30ms tend to sound percussive, while attacks that are longer than 30ms are more like those of a bowed instrument. In the demo called attack-sync, you will hear two sounds, one with a long attack and one with a short percussive attack. When you start the patch, the two sounds will begin together, although, as you will notice, the one with the longer attack will appear to start later. See if you can adjust the start times such that they appear to start isochronously.
 
-attack sync-ss
+{% include img-figure url="/MUTOR/assets/images/unit7_attack-sync.png" description="Perceptual Onset" %} 
 
 ## Subdivision
 The optimal range of tempo encoding occurs between 300ms and 1500ms. This is known as the zone of temporal integration, or the tactus. What happens when rhythmic durations are way above tactus? It turns out we subdivide. Subdivision refers to the breaking down of large units into usually even-sized smaller units. In the rhythmic sense the brain is performing chunking, and also building a hierarchical structure of rhythm. As in the frequency dimension for pitch and harmony (see units 5 and 8), small-integer ratios in time play important roles in rhythmic perception. Most rhythmic subdivisions consist of 2:1 ratios, especially in Western music. Rhythms in music of other cultures, e.g. clavé rhythmic patterns in Afro-Cuban and Brazilian rhythms, employ more complex rhythmic patterns, but which can also be broken down into chunks of 2:1 temporal ratios (see Toussaint).
@@ -117,6 +117,7 @@ Two kinds of time maps we introduce here are the rhythmogram and the maps of per
 
 In addition to the rhythmogram and the score vs performance time map, various other rhythmic representations deserve mention. Desain and Honing describe a triangular space that represents all possible expressive deviations given a four-note rhythm.
 
+{% include img-figure url="/MUTOR/assets/images/unit7_desainhoning.png" description="DesainHoning" %} 
 (image source: Desain & Honing, 2003. Perception.)
 
 Other statistical methods to analyze rhythm and expressive microtiming are also widely used. Benadon uses histograms, which are graphs plotting the occurrence frequencies of events, to diagram the beat-upbeat ratios (BURs) of the swing rhythm in jazz.
@@ -126,6 +127,7 @@ Given the discussion of microtiming above, it should be clear by now that there 
 
 score time vs. performance time
 
+{% include img-figure url="/MUTOR/assets/images/unit7_score_v_performance.png" description="Score time vs performance time" %}
 Figure 1. Score time versus performance time.
 
 By modelling the relationship between score and performance time, one can create a synthesizer that will play music with a more human feel (A Novel Representation for Rhythmic Structure).
@@ -136,18 +138,24 @@ The rhythmogram is an effective way to visualize rhythmic structure in a musical
 
 To visualize the low-frequency filterbank, consider a set of very low-frequency bandpass filters arranged logarithmically. For instance, several filters along the filterbank could be: 0.125Hz, 0.25Hz, 0.5Hz, 1Hz, 2Hz, and 4Hz. The rhythmogram plots musical time on the x axis and these filters on the y axis.
 
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram1.gif" description="Rhythmogram1" %}
+
 The axes of the rhythmogram: frequency filterbank vs. time.
 
 In this representation, notes which occur quickly, e.g. sixteenth notes, would show activity at the highest frequency filters along the filterbank.
 
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram2.gif" description="Rhythmogram2" %}
 Fast notes activate high-frequency filters along the filterbank.
 
 Notes occurring at the next fastest level, i.e. eighth notes, would appear as activity at the next level of filters:
  
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram3.gif" description="rhythmogram3" %}
 The next level of notes (quarter notes) would then appear energy at 1Hz filters, half notes at 0.5Hz filters, and finally, at the highest level, whole notes would appear at 0.25Hz filters. 
 
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram4.gif" description="rhythmogram4" %}
 Taken together, we see an emergent tree-like diagram of rhythmic activity, with the different layers of the filterbank representing each level of rhythmic structure and importance. Thus, we can say that the rhythmogram provides a visual representation of the tree-like rhythmic structure of a musical piece.
 
+{% include img-figure url="/MUTOR/assets/images/unit7_rhythmogram5.gif" description="rhythmogram5" %}
 The theoretically derived rhythmogram can be applied to actual performances to represent not only the rhythmic structure of the composition, but also the perceptual experience of the piece as a function of its decay rate over time. This links the mathematical idea of a filterbank to the auditory system, with its built-in mechanisms for the detection of onsets. In addition, the rhythmogram could be used to represent the sound structure of speech as well as music.
 
 An application of the rhythmogram to represent perceptual decay is shown here in the speech utterance "tennessee air":
