more images in unit 7

--- a/_units/07.md
+++ b/_units/07.md
@@ -160,12 +160,16 @@ The theoretically derived rhythmogram can be applied to actual performances to r
 
 An application of the rhythmogram to represent perceptual decay is shown here in the speech utterance "tennessee air":
 
+{% include img-figure url="/MUTOR/assets/images/unit7_tenessee_rhythmogram.png" description="tenessee_rhythmogram.png" %}
+
 (image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf) 
 
 Instead of a low-frequency filterbank, the above rhythmogram uses a the rate of decay of memory as its y axis. Notes which are more important in the rhythmic structure would be in memory for longer; thus, it would take a higher number of seconds to decay from memory. 
 
 This use of the rhythmogram also yields a tree-like structure, which can be represented diagramatically:
  
+{% include img-figure url="/MUTOR/assets/images/unit7_tenessee_hierarchy.png" description="tenessee_hierarchy.png" %}
+
 (image source: http://www.dcs.shef.ac.uk/~guy/pdf/icslp94.pdf) 
 
 Using the rhythmogram, the hierarchical structure of music and speech can be derived based on signal processing methods.
@@ -186,28 +190,49 @@ Pacemaker and accumulator models are well supported by neural evidence. Neurolog
 ## Covariance Model
 One common observation in rhythm production is that when asked to tap evenly, humans tend to produce rhythms that are slightly uneven. For example, suppose you are required to produce even taps of two taps per second. Here is a time line of your expected taps, in seconds:
  
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap.gif" description="eventap.gif" %}
+
 However, it turns out that the actual measured production is as followed:
+
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap2.gif" description="eventap2.gif" %}
 
 The simplest mathematical model to predict this pattern of behavior is the covariance model. The covariance model proposes that a negative correlation exists between the time interval between two taps and the time interval between the two taps immediately preceding. That is, if tn is the time interval between successive taps, i.e.
 
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap3.gif" description="eventap3.gif" %}
+
 Then for every time interval tn, the next time interval, tn+1, is negatively correlated in length.
+
+{% include img-figure url="/MUTOR/assets/images/unit7_eventap4.gif" description="eventap4.gif" %}
+
  If tn is long, then tn+1 is short; if tn is short, then tn+1 is long. (This is the negative correlation principle). 
 Much of the deviations between rhythmic tapping can be modelled this way.
 
 ## CoupledOscillator
 In contrast to the IntervalTiming models of rhythm, the coupled oscillator models conceive of rhythm as the result of recurring cycles of individual processes known as oscillators. An oscillator is a device which produces a recurrent output at a fixed frequency determined by its own properties, with an amplitude that depends on the amount of energy given to it. A sine wave is a simple output of an oscillator. A spring and a pendulum are both prime examples oscillators. 
 
+{% include img-figure url="/MUTOR/assets/images/unit7_grandclock1.gif" description="grandclock1.gif" %}
+
 A grandfather clock contains a pendulum, which is a kind of oscillator.
 
+{% include img-figure url="/MUTOR/assets/images/unit7_pendulum2.gif" description="pendulum2.gif" %}
+
 A simple pendulum. (image source: http://webpages.ursinus.edu/mtakats/gifcat/pendulum.html)
+
+{% include img-figure url="/MUTOR/assets/images/unit7_spring.gif" description="spring.gif" %}
 
 A spring is another example of a simple oscillator. (image source: http://webpages.ursinus.edu/mtakats/gifcat/spring.html)
 
 The coupled oscillator model states that a set of oscillators entrain to each other - that is, their frequencies become tuned to each other, or become coupled as a result of the interaction between two oscillators.
 
+{% include img-figure url="/MUTOR/assets/images/unit7_springsym.gif" description="springsym.gif" %}
+
 Coupled oscillators as two symmetrical springs. (image source: http://webpages.ursinus.edu/mtakats/gifcat/springsym.html)
 
 Coupled pendulum oscillators (image source: http://xeon.concord.org:8080/modeler/index.html)
+
+{% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" %}
+
 Applied to rhythm, the coupled oscillator model states that rhythm is the result of a set of internal oscillators which entrain towards the expected rhythm. Large and Kolen (1994) and McAuley (1996) have modeled the perception and production of rhythm using coupled oscillators, where the placement of each beat within a metric structure is set by the phase of the oscillator, and individual oscillators entrain towards the recurrent beat. The use of coupled oscillators has led to some successful beat-finding algorithms. Coupled oscillator theories are computationally attractive as they can predict many observations, including the perception of meter as a recurrent rhythmic pattern, using relatively elegant mathematical models. Unfortunately, we are not yet sure of physiological bases of coupled oscillator models.
 
 # Summary
