--- a/_units/07.md
+++ b/_units/07.md
@@ -232,6 +232,7 @@ Coupled pendulum oscillators (image source: http://xeon.concord.org:8080/modeler
 
 {% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" %}
 {% include img-figure url="/MUTOR/assets/images/unit7_pendulum.gif" description="pendulum.gif" %}
+<!-- Can you make the two pendulum images right next to each other? (left and right, not up and down) -->
 
 Applied to rhythm, the coupled oscillator model states that rhythm is the result of a set of internal oscillators which entrain towards the expected rhythm. Large and Kolen (1994) and McAuley (1996) have modeled the perception and production of rhythm using coupled oscillators, where the placement of each beat within a metric structure is set by the phase of the oscillator, and individual oscillators entrain towards the recurrent beat. The use of coupled oscillators has led to some successful beat-finding algorithms. Coupled oscillator theories are computationally attractive as they can predict many observations, including the perception of meter as a recurrent rhythmic pattern, using relatively elegant mathematical models. Unfortunately, we are not yet sure of physiological bases of coupled oscillator models.
 
