--- a/_units/07.md
+++ b/_units/07.md
@@ -10,10 +10,13 @@ summary: rhythm, meter, coupled oscillators, neuronal entrainment
 authors: 
  - Psyche Loui
  - John MacCallum
-topics: [topic 1, topic 2]
+topics: [Introduction, Perceptual Onset Vs Temporal Envelope, Subdivision, Tactus, Tatum, Accents and Event Stream Vectors, Microtiming and Expressive Timing, Time Maps, Score Time Vs Performance Time, Rhythmogram, Models of Rhythm Perception, Interval Timing ,Covariance Model, CoupledOscillator]
 test_questions:
- - question 1
- - question 2
+ - What are the important features of sound that enable the perception of rhythmic beats?
+ - What is the optimal range of rhythmic function? How do we know?
+ - What are the axes of a rhythmogram?
+ - What is microtiming?
+ - What are the relative advantages and disadvantages of the interval timing model and the coupled oscillator model?
 
 ###
 # page layout:
@@ -29,22 +32,6 @@ mathjax: true
 # Rhythm
 
 ## Introduction
-
-Tactus
-Tatum
-Accents And Event Stream Vectors
-Microtiming And Expressive Timing
-Time Maps
-Score Time Vs Performance Time
-Rhythmogram
-Models Of Rhythm Perception
-Interval Timing
-Covariance Model
-Coupled Oscillator
-Summary
-References
-Links and Downloads
-Quiz Items
 
 While pitch has received the most attention in perception research, whereas most of music theory consists of putting pitches together to form harmonies, relatively little of common-practice Western musical theory addresses rhythm. Here we define rhythm as the pattern of temporal durations, especially in music. In this unit we will examine the perception and cognition of rhythm. We will begin with the basic observations, e.g. what the optimal range of rhythm and meter are, and how rhythmic subdivisions and expressive timing occur. Then we will discuss the various representations of rhythm, somewhat analogous to visual representations of pitch covered in Unit 5. Finally we will talk about models of rhythm perception and production, and bring in existing literature in an attempt to explain the temporal regularities and deviations that give rise to the human sense of rhythm.
 
