--- a/_units/07.md
+++ b/_units/07.md
@@ -92,6 +92,8 @@ mechanical timing
 
 expressive timing
 
+{% include img-figure url="/MUTOR/assets/images/unit7_timing-pattern.png" description="timing-pattern" %} 
+
 (source: Penel & Drake, 2000. Rhythm in music performance and perceived structure. In Desain & Windsor, Ed.)
 
 Above, in the section on the TatuM, along with the parameters of probability of occurence, duration, etc., we also defined a deviation vector. This deviation in timing is meant to mimic the microtiming found in human performance.
