--- a/_units/07.md
+++ b/_units/07.md
@@ -91,6 +91,7 @@ With respect to rhythm, performances of music are often considered cold and lack
 
 mechanical timing
 
+<!-- how do I post audio files? -->
 {% include img-figure url="/MUTOR/assets/audios/traumerei_scoretime.mp3" description="Straumerei_scoretime.mp3" %} 
 
 expressive timing
